加入首页导航栏，发状态、图片、日志、链接 入口

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -157,4 +157,18 @@ body{
 .tip{
 	float: right;
 }
+.ui.menu {
+	background: none;
+	
+}
+.ui.labeled.icon.menu {
+	margin-left: 10px;
+	margin-bottom: 30px;
+	
+}
+.ui.labeled.icon.menu > .item {
+	min-width: 132px;
+}
+
+
 
