you can follow tags you have interest in

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -188,3 +188,10 @@ body{
 .ui.card .centered {
 	text-align: center;
 }
+
+.tagheader > div{
+	display: inline-block;
+}
+.tagheader > .content {
+	font-size: 1em;
+}
