--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -92,7 +92,7 @@ body{
         position: relative;
         height: 30px;
         padding-top: 3px;
-        width: auto;
+        width: 100%;
 		vertical-align: baseline;
   }
   .tagfield {
@@ -202,4 +202,23 @@ body{
 .ui.divided.list > .item  {
 	border-top: 1px solid  rgba(0, 0, 0, 0.05);
 }
+.navbar-nav .dropdown {
+  line-height: 20px;
+  position: relative;
+  padding: 10px 0 10px 0;
+}
+
+.ui.simple.dropdown .menu {
+	right: 3px;
+	left: auto;
+}
+
+.navbar-nav .dropdown  {
+	padding: 10px 4px 12px 0;
+}
+
+
+
+
+
 
