update welcome page

--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -13,3 +13,230 @@
 	margin: 0 auto;
 	padding-top: 75px;
 }
+
+.section2 p { display: none;}
+.section3 .features { position: relative; bottom: -120%;}
+.section4 p { display: none;}
+
+
+
+.overview{
+	text-align: center;
+	margin-top: -15px;
+}
+
+.overview .initials {
+	font-family: Helvetica-Light;
+	font-size: 100px;
+	color: #FFFFFF;
+	line-height: 120px;
+	margin-bottom: 20px;
+}
+.overview .en_initials{
+	font-family: Helvetica-Light;
+	font-size: 40px;
+	color: #FFFFFF;
+	line-height: 48px;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
+
+}
+.overview .zh_initials{
+	font-family: STHeitiSC-Light;
+	font-size: 36px;
+	color: #FFFFFF;
+	line-height: 37px;
+	/* 开放 分享 自由: */	
+	
+}
+
+.login{
+	text-align: left;
+	margin-left: 100px;
+	margin-right: 60px;
+}
+.login .login_header{
+	font-family: STHeitiSC-Light;
+	font-size: 48px;
+	color: #FFFFFF;
+	line-height: 49px;
+	margin-bottom: 20px;
+}
+.login input{
+	border: none;
+	border-radius: 2px;
+	/* Rectangle 4: */
+	background: #E7EBB2;
+	height: 45px;
+	width: 300px;
+	margin-bottom: 10px;
+	color:#9B9B9B;
+	font-size: 20px;
+	padding-left: 10px;
+}
+.login .login_btn{
+	margin-top: 10px;
+	border: none;
+	border-radius: 2px;
+	background: #F5A623;
+	width: 150px;
+	height: 40px;	
+	font-size: 20px;
+	color:white;
+}
+.login .forget_pwd{
+	float: right;
+	margin-top: 20px;
+	color:white;
+	font-size: 15px;
+}
+.login .forget_pwd a{
+	text-decoration: none;
+	cursor: pointer;
+	color: white;
+}
+.section1 .container {
+	margin-top: -80px;
+}
+.pulldown_tip{
+	text-align: center;
+}
+.pulldown_tip img{
+	width:  40px;
+	position: absolute;
+	bottom: 20px;
+}
+.nav{
+	width: 100%;
+	position: fixed;
+	z-index: 100;
+}
+
+.navbar {
+	height: 60px;
+	padding: 0;
+	margin: 0;
+	background: none;
+}
+.navbar .register{
+	position: absolute;
+	top: 10px;
+	right: 30px;
+	border: none;
+	border-radius: 2px;
+	background: #7ECBB1;
+	width: 90px;
+ 		height: 40px;	
+ 		font-size: 20px;
+ 		color: white;
+}
+
+
+
+.section .center{
+	text-align: center;
+}
+
+.section .header{
+	font-family: Helvetica-Light;
+	font-size: 56px;
+	color: #000000;
+	line-height: 67px;
+	
+}
+.section .content{
+	margin-top: 20px;
+	font-family: STHeitiSC-Light;
+	font-size: 30px;
+	color: #9B9B9B;
+}
+.section .content p{
+	margin: 0;
+	padding: 0;
+	line-height: 50px;
+}
+
+.section2 .gallery{
+	margin: 0 auto;
+	margin-top: 40px;
+	width: 98%;
+}
+.section2 .gallery .box{
+	display: inline;
+}
+
+.section2 .gallery .box img{
+	height: 200px;
+}
+
+
+/* clearfix */
+.gallery:before,
+.gallery:after {
+    content: "";
+    display: table;
+}
+.galleryafter {
+    clear: both;
+}
+
+.box {
+  float: left;
+  margin-bottom: 10px; 
+}
+.box img {
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: bottom;
+}
+.first-item {
+  clear: both;
+}
+/* remove margin bottom on last row */
+.last-row, .last-row ~ .item {
+  margin-bottom: 0;
+}
+
+
+.features.row1{
+	margin: 0 auto;
+	margin-top: 40px;
+	width: 60%;
+}
+.features.row2{
+	margin: 0 auto;
+	width: 40%;
+}
+
+.features.row1 .feature{
+	display: inline-table;
+	width: 33%;
+	margin: 0;
+	padding: 0;
+}
+
+.features.row2 .feature{
+	display: inline-table;
+	width: 49%;
+	margin: 0;
+	padding: 0;
+}
+
+.features .circle{
+	margin: 0 auto;
+	background-color: white;
+	height: 180px;
+	width:180px;
+	border-radius: 200px;
+}
+
+
+.footbar{
+	position: absolute;
+	bottom: 0px;
+	height: 120px;
+	width: 100%;
+	background-color: white;
+}
+
+
