--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -231,11 +231,16 @@
 }
 
 .features .circle{
+	display: table;
 	margin: 0 auto;
 	background-color: white;
 	height: 150px;
 	width:150px;
 	border-radius: 150px;
+}
+.features .circle i.big{
+	display: table-cell;
+	font-size: 40px;
 }
 
 .features .header{
