--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -569,4 +569,18 @@ form style
 }
 
 
+/******************
+	modal style
+	----------
+******************/
+
+
+.ui.small.modal{
+	width: 35%;
+}
+.ui.modal{
+	left:55%;
+}
+
+
 
