--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -117,14 +117,43 @@ a {
 	display: none;
 }
 
+
+/*******************
+ 	post style
+ -------------
+ *******************/
+
 .post{
 	margin-top:30px;
 }
+.post .header{
+	font-size: 36px;
+	margin-bottom: 10px;
+}
+.post .date{
+	color: rgb(150, 150, 150);
+	font-size: 16px;
+}
+.post .author{
+	float: left;
+}
+.post .meta{
+	width: 100%;
+	height: 40px;
+	margin: 30px 0;
+}
+.post .author span{
+	font-size: 16px;
+}
+.post .tags{
+	float: right;
+}
 .post p {
-	line-height: 24px;
+	line-height: 22px;
+	font-size: 13px;
 }
 .post.like{
-float: right;
+	float: right;
 
 }  
   
@@ -546,6 +575,32 @@ float: right;
 }
 
 
+.post.comments{
+	width: 100%;
+	background-color: white;
+}
+.post.comments #replyarea{
+	margin-top: 50px;
+}
+.post.comments .header{
+	width: 60px;
+	font-size: 20px;
+	text-align: center;
+	border-bottom: 2px solid black;
+	margin-bottom: 0;
+	padding-bottom: 10px;
+}
+.post.comments .ui.divider{
+	margin-top: 0;
+}
+
+.post.comments .date{
+	font-size: 13px;
+}
+
+.post.comments .ui.comments .comment .text{
+	margin: 5px 0 10px 0;
+}
 /**
 form style
 */
