--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -476,18 +476,18 @@ a {
 	color: black;
 	cursor: pointer;
 }
-.explore .main .gallery{
+.gallery{
 	padding: 40px;
 	padding-top: 50px;
 }
-.explore .main .gallery .box{
+.gallery .box{
 	position: relative;
 	display: inline;
 	float: left;
 	margin-bottom: 5px;
 	overflow: hidden;
 }
-.explore .gallery .box .meta{
+.gallery .box .meta{
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
@@ -495,10 +495,10 @@ a {
 	height: 45px;
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
 }
-.explore .gallery .meta a{
+.gallery .meta a{
 	padding: 10px;
 }
-.explore .gallery .meta span{
+.gallery .meta span{
 	color: white;	
 }
 
