--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -77,6 +77,7 @@
 #error{
 	margin-right: 20px;
 	opacity: 0.8;
+	font-size: 14px;
 }
 #error ul{
 	margin: 0;
@@ -97,22 +98,45 @@
 }
 .login .login_btn{
 	margin-top: 10px;
+	margin-right: 7.8%;
 	border: none;
 	border-radius: 2px;
-	background: #7ECBB1;
-	width: 150px;
+	background: #21ba45;
+	width: 42%;
 	height: 40px;	
 	font-size: 20px;
 	color:white;
+	text-decoration: none;
+	cursor: pointer;
 }
+.login .register_btn {
+	margin-top: 10px;
+	border: 1px solid;
+	border-radius: 2px;
+	background: transparent;
+	width: 42%;
+	height: 40px;	
+	font-size: 20px;
+	color:white;
+	opacity: 0.6;
+	text-decoration: none;
+	cursor: pointer;
+}
+
 .login .login_btn:hover {
-    background-color: #21ba45;
+    background-color: #16ab39;
     transition: 0.5s;
+}
+
+.login .register_btn:hover{
+	opacity:1;
+	transition: 0.5s;
 }
 
 .login .forget_pwd{
 	float: right;
 	margin-top: 20px;
+	margin-right: 20px;
 	color:white;
 	font-size: 15px;
 }
@@ -343,8 +367,16 @@
 	  padding: 12px;
 	  font-size: 20px;
 	  color: white;
-	  background-color: #3CBC4F;
 	  border-radius: 3px;	
+	  border: none;
+	  background: #21ba45;
+	  text-decoration: none;
+	  cursor: pointer;
+}
+
+.section4 .login_btn:hover {
+    background-color: #16ab39;
+    transition: 0.5s;
 }
 
 .section4 .register_btn{
@@ -352,9 +384,17 @@
 	  text-align: center;
 	  padding: 12px;
 	  font-size: 20px;
-	  color: black;
-	  background-color: white;
 	  border-radius: 3px;	
+	  border: 1px solid;
+	  background: transparent;
+	  color:white;
+	  opacity: 0.6;
+	  text-decoration: none;
+	  cursor: pointer;
+}
+.section4 .register_btn:hover{
+	opacity: 1;
+	transition: 0.5s;
 }
 .section4 .row:FIRST-CHILD {
 	margin-bottom: 50px;
